map footer spacing fixes

--- a/source/scss/map.scss
+++ b/source/scss/map.scss
@@ -184,6 +184,11 @@
         clear: both;
     }
 
+    .map1__title {
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+
     .graveyard-map--one__container {
         .graveyard-map__footer__scale--one {
             margin-left:100px;
