--- a/source/scss/sections.scss
+++ b/source/scss/sections.scss
@@ -87,7 +87,8 @@
                 height: 80px;
                 overflow: hidden;
                 position: absolute;
-                width: 65%;
+                max-width:600px;
+                width: 100%;
                 z-index: 20;
 
                 &__play {
